@@ -4,6 +4,7 @@ django-sitegate changelog
 
 Unreleased
 ----------
++ Added Bootstrap 4 templates.
 + Django 2.0 basic compatibility.
 * Dropped support for Python<3.4 and Django<1.7.
 
